--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
     <form method="post" action="{{ url_for('register') }}">
         <p><input type="text" name="username" placeholder="Username *" required /></p>
         <p><input type="email" name="email" placeholder="Email Address *" required /></p>
-        <p><input type="text" name="username" placeholder="Your Name" /></p>
+        <p><input type="text" name="name" placeholder="Your Name" /></p>
         <p><input type="password" name="password" placeholder="Password" required /></p>
         <p><input type="submit" /></p>
     </form>
